--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -6,7 +6,7 @@
     position: fixed;
     z-index: 10;
     width: 100%;
-    box-shadow: 0px 0px 1.5px rgb(114, 113, 113);
+    
 }
 .brand{
     font-size: 28px;
@@ -35,4 +35,10 @@
 }
 .blue{
     color: #4285f4;
+}
+
+.scrolled{
+    box-shadow: 0px 0px 2px rgb(114, 113, 113);
+    background-color: rgba(231,229,250,0.98);
+    transition: ease 1s;
 }
