--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -39,6 +39,6 @@
 
 .scrolled{
     box-shadow: 0px 0px 2px rgb(114, 113, 113);
-    background-color: rgba(231,229,250,0.98);
+    background-color: rgba(201, 198, 235, 0.98);
     transition: ease 1s;
 }
