--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -15,6 +15,7 @@
     padding-top: 30px;
 }
 .footer-section .footer-info{
+    padding: 50px;
     display: grid;
     grid-template-columns: auto auto;
     justify-content: space-between;
@@ -26,10 +27,9 @@
 }
 .footer-section .address-section{
     width: 350px;
-    margin: 50px 0px 0px 100px;
 }
 .footer-section .coding-handles{
-    margin: 50px 100px 0px 0px;
+
 }
 .footer-section .coding-handles h4{
     font-weight: bold;
@@ -42,3 +42,23 @@
 .footer-section .social i{
     margin: 15px 10px
 }
+
+
+@media (max-width: 690px) {
+    .footer-section .footer-info{
+        grid-template-columns: auto;
+    }
+    .footer-section .footer-info{
+        padding: 50px 0px 20px;
+        justify-content: center;
+        text-align: center;
+    }
+    .footer-section .coding-handles ul{
+        list-style-type: none;
+    }
+    .footer-section .address-section{
+        width: 400px;
+        margin-bottom: 30px;
+    }
+  }
+  
