--- a/src/css/project.css
+++ b/src/css/project.css
@@ -1,36 +1,101 @@
-.project-section{
-    padding: 50px 200px;
+.project-section {
+  padding: 50px 200px;
 }
-.project-section h2{
-    font-family: 'Mirza', cursive;
-    font-weight: 600;
-    color: #393d41;
-    font-size: 50px;
+.project-section h2 {
+  font-family: "Mirza", cursive;
+  font-weight: 600;
+  color: #393d41;
+  font-size: 50px;
 }
-.project-list{
-    padding-top: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.project-list {
+  padding-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between !important;
 }
-.project-section .button-div{
-    display: flex;
-    justify-content: space-evenly;
-    font-family: 'Space Mono', monospace;
+.project-section .button-div {
+  display: flex;
+  justify-content: space-evenly;
+  font-family: "Space Mono", monospace;
 }
-.project-section .skill-image{
-    overflow: hidden;
+.project-section .skill-image {
+  overflow: hidden;
 }
-.project-section .skill-image .skill-img{
-    height:200px;
+.project-section .skill-image .skill-img {
+  height: 200px;
 }
-.project-section .project-card{
+.project-section .project-card {
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  width: 340px;
+  margin-bottom: 50px;
+}
+.project-card .card-text {
+  height: 130px;
+  text-align: justify;
+  text-align-last: center;
+}
+@media (max-width: 1341px) {
+    .project-section {
+      padding: 10px 60px;
+    }
+  }
+
+@media (max-width: 965px) {
+    .project-section{
+        
+    }
+    .project-list{
+        display: flex;
+        justify-content: center;
+    }
+  .project-section .project-card {
+    /* width: 500px !important; */
+  }
+  .project-card .skill-image{
+      /* height: 300px; */
+  }
+  .project-card .skill-image .skill-img{
+      /* height: 300px; */
+  }
+}
+@media (max-width: 696px) {
+  .project-section{
     justify-content: center;
-    text-align: center;
-    align-items: center;
+  }
+  .project-section .project-card{
+    width: 800px !important;
+  }
+  .project-section .project-card .skill-image{
+    height: 300px;
+  }
+  .project-section .project-card .skill-image .skill-img{
+    height: 300px;
+  }
 }
-.project-card .card-text{
-    height: 130px;
-    text-align: justify;
-    text-align-last: center;
+@media (max-width: 542px) {
+  .project-section .project-card{
+    width: 450px !important;
+  }
+  .project-section .project-card .skill-image{
+    height: 200px;
+  }
+  .project-section .project-card .skill-image .skill-img{
+    height: 300px;
+  }
+}
+@media (max-width: 460px) {
+  .project-section .project-card{
+    width: 410px !important;
+  }
+  .project-section .project-card .skill-image{
+    height: 150px;
+  }
+  .project-section .project-card .skill-image .skill-img{
+    height: 250px;
+  }
+  .project-section{
+    padding: 10px 20px;
+  }
 }
