--- a/src/css/skill.css
+++ b/src/css/skill.css
@@ -1,35 +1,69 @@
-.skill-div{
-    padding: 50px 200px;
+.skill-div {
+  padding: 50px 200px;
 }
-.skill-card{
-   border: none;
+.skill-card {
+  border: none;
+  margin-bottom: 50px;
 }
-.skill-section{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    border: none;
+.skill-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border: none;
 }
 .skill-section .image-section {
-   height: 60%;
-   align-items: center;
-   display: flex;
-   overflow: hidden;
+  height: 60%;
+  align-items: center;
+  display: flex;
+  overflow: hidden;
 }
-.skill-section .card-title{
-    text-align: center;
-    font-family: 'Space Mono', monospace;
-    font-weight: bold;
+.skill-section .card-title {
+  text-align: center;
+  font-family: "Space Mono", monospace;
+  font-weight: bold;
 }
-.skill-section .card-content{
-    text-align: justify;
-    text-align-last: center;
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
+.skill-section .card-content {
+  text-align: justify;
+  text-align-last: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
 }
 .skill-div h2 {
-    font-family: 'Mirza', cursive;
-      font-weight: 600;
-      color: #393d41;
-      font-size: 50px;
+  font-family: "Mirza", cursive;
+  font-weight: 600;
+  color: #393d41;
+  font-size: 50px;
+}
+
+@media (max-width: 1341px) {
+  .skill-div {
+    padding: 10px 60px;
   }
+}
+
+@media (max-width: 696px) {
+ .skill-section .skill-card{
+   width: 800px !important;
+ }
+ .skill-section .skill-card .image-section{
+   height: 400px;
+ }
+}
+@media (max-width: 542px) {
+  .skill-section .skill-card{
+  
+  }
+  .skill-section .skill-card .image-section{
+    height: 400px;
+  }
+ }
+ @media (max-width: 485px) {
+  .skill-section .skill-card .image-section{
+    height: 235px !important;
+  }
+}
+ @media (max-width: 460px) {
+  .skill-div{
+    padding: 10px 20px;
+  }
+}
