--- a/src/css/skill.css
+++ b/src/css/skill.css
@@ -1,5 +1,8 @@
 .skill-div {
   padding: 50px 200px;
+  background-color: rgb(251,249,253);
+background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
+/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 .skill-card {
   border: none;
