--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -39,10 +39,13 @@
 
 .scrolled{
     box-shadow: 0px 0px 2px rgb(114, 113, 113);
-    background-color: rgba(201, 198, 235, 0.98);
+    background-color: rgba(209, 220, 255, 0.98);
     transition: ease 1s;
+    font-size:  17px;
 }
-
+.scrolled-out{
+    transition: ease 0.5s;
+}
 
 
 
@@ -55,5 +58,12 @@
   @media (max-width: 965px) {
     .navbar-section{
         padding: 0px 30px;
+    }
+    .navbar-collapse{
+        padding-bottom:20px;
+        text-align: center;
+    }
+    .nav-item{
+        margin : 4.5px 0;
     }
   }
