Adjusting skill image width

--- a/src/css/skill.css
+++ b/src/css/skill.css
@@ -1,8 +1,5 @@
 .skill-div {
-  padding: 50px 200px;
-  background-color: rgb(251,249,253);
-background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
-/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+  padding: 50px 200px 10px;
 }
 .skill-card {
   border: none;
@@ -15,7 +12,8 @@ background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
   border: none;
 }
 .skill-section .image-section {
-  height: 60%;
+  padding: 40px;
+  height: 190px;
   align-items: center;
   display: flex;
   overflow: hidden;
@@ -30,6 +28,9 @@ background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
   text-align-last: center;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
+}
+.skill-section .card-body{
+ 
 }
 .skill-div h2 {
   font-family: "Mirza", cursive;
