--- a/src/css/about.css
+++ b/src/css/about.css
@@ -3,14 +3,23 @@
   grid-template-columns: auto auto;
   padding: 30px 200px;
   background-color: rgb(251,249,253);
-  background-image: url("https://www.transparenttextures.com/patterns/arches.png");
-  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+  /* background-image: url("https://www.transparenttextures.com/patterns/arches.png");
+  This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+  background-image: url("../assets/background-image/1.png");
+  background-repeat: no-repeat;
+  background-position-x: 600px;
+  background-size: 60%;
 }
 .about-section .image-section img {
   width: 400px;
 }
 .about-section .text-section {
   padding-top: 40px;
+ 
+  overflow: visible !important;
+  background-repeat: no-repeat;
+  background-position-x: 100px;
+  /* overflow: visible; */
 }
 .about-section .text-section h2 {
   padding: 20px 0 20px 150px;
@@ -26,6 +35,7 @@
   padding: 20px 0 20px 150px;
   font-size: 18px;
   font-family: "Roboto", sans-serif;
+  font-style: italic;
 }
 
 @media (max-width: 1341px) {
