--- a/src/css/about.css
+++ b/src/css/about.css
@@ -43,6 +43,8 @@
     grid-template-columns: auto;
     align-items: center;
     padding: 10px 60px;
+    background-position-x: 50px;
+    background-size: 100%;
   }
   .about-section .text-section p,
   .about-section .text-section h2 {
@@ -66,6 +68,22 @@
 @media (max-width: 750px) {
   .about-section .image-section img {
     width: 100%;
+  }
+  .about-section{
+    background-position-y: 50px;
+  }
+}
+@media (max-width: 660px) {
+  .about-section{
+    background-position-y: 100px;
+    background-position-x: 10px;
+  }
+}
+@media (max-width: 600px) {
+  .about-section{
+    background-position-y: 100px;
+    background-position-x: -200px;
+    background-size: 250%;
   }
 }
 @media (max-width: 460px) {
