--- a/src/css/project.css
+++ b/src/css/project.css
@@ -1,5 +1,6 @@
 .project-section {
   padding: 50px 200px;
+  background-color: rgba(130, 162, 238, 0.11);
 }
 .project-section h2 {
   font-family: "Mirza", cursive;
