--- a/src/css/skill.css
+++ b/src/css/skill.css
@@ -10,6 +10,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   border: none;
+  margin-top: 30px;
 }
 .skill-section .image-section {
   padding: 40px;
