Adding aos to project and skill section

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -21,6 +21,7 @@
 }
 .header-section .verified-image {
   margin-bottom: 5px;
+  margin-left: 10px;
 }
 .header-section .text-section p {
   text-align: justify;
