--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -28,8 +28,8 @@
 .footer-section .address-section{
     width: 350px;
 }
-.footer-section .coding-handles{
-
+.footer-section .coding-handles a{
+    color: white;
 }
 .footer-section .coding-handles h4{
     font-weight: bold;
