--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -10,7 +10,7 @@
   align-items: center;
 }
 .contact-section .form-section{
-    padding: 50px;
+    padding: 10%;
     border-radius: 15px;
     background-color: rgba(39, 92, 129, 0.096);
 }
@@ -29,5 +29,10 @@
     .contact-section {
       padding: 10px 20px;
       justify-content: center;
+
+    }
+    .contact-section .lottie{
+       
+        
     }
  }
