--- a/src/css/education.css
+++ b/src/css/education.css
@@ -24,5 +24,7 @@ background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
     }
   }
   @media (max-width: 696px) {
-  
+  .MuiPaper-root{
+      width: 180px;
+  }
 }
