--- a/src/css/about.css
+++ b/src/css/about.css
@@ -12,8 +12,8 @@
   background-size: 60%;
 }
 .about-section .image-section {
-  width: 400px !important;
-  height: 400px !important;
+  width: 480px !important;
+  height: auto !important;
 }
 .about-section .text-section {
   padding-top: 40px;
@@ -24,7 +24,7 @@
   /* overflow: visible; */
 }
 .about-section .text-section h2 {
-  padding: 20px 0 20px 150px;
+  padding: 20px 0 20px 50px;
   font-family: "Space Mono", monospace;
   font-family: "Mirza", cursive;
   font-weight: 600;
@@ -34,7 +34,7 @@
 .about-section .text-section p {
   text-align: justify;
   text-align-last: center;
-  padding: 20px 0 20px 150px;
+  padding: 20px 0 20px 50px;
   font-size: 18px;
   font-family: "Roboto", sans-serif;
   font-style: italic;
