--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -8,6 +8,7 @@
     width: 400px;
 }
 .experience-section .exp-cards{
+    margin-top: 30px;
     display: grid;
     grid-template-columns: auto auto;
 }
