--- a/src/css/about.css
+++ b/src/css/about.css
@@ -39,7 +39,13 @@
   font-family: "Roboto", sans-serif;
   font-style: italic;
 }
-
+.about-section .text-section .chip-class{
+  padding-left: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  
+}
 @media (max-width: 1341px) {
   .about-section {
     grid-template-columns: auto;
@@ -82,6 +88,10 @@
   }
   .about-section .text-section h2{
     text-align: center;
+  }
+  .about-section .text-section .chip-class{
+    padding: 0;
+    height: 80px;
   }
 }
 @media (max-width: 600px) {
