Rectifying toggle icon color

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -58,9 +58,9 @@
 .basic-navbar-nav{
     border: none;
 }
-.collapsed i{
+/* .collapsed i{
     color: white !important;
-}
+} */
 .toggle-icon{
     color: white !important;
 }
