--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
 }
+html{
+    overflow-x: hidden;
+}
 body{
     scroll-behavior: smooth !important;
+    overflow-x: hidden;
+    position: relative;
 }
