--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -12,10 +12,10 @@
     vertical-align: bottom;
     line-height: 8px;
     padding-bottom: 10px;
-    padding-top: 30px;
+    /* padding-top: 30px; */
 }
 .footer-section .footer-info{
-    padding: 50px;
+    padding: 50px 50px 5px;
     display: grid;
     grid-template-columns: auto auto;
     justify-content: space-between;
@@ -27,9 +27,17 @@
 }
 .footer-section .address-section{
     width: 350px;
+    padding-bottom: 20px;
+}
+.footer-section .address-section p{
+    margin: 0px;
+    padding-bottom: 10px !important;
 }
 .footer-section .coding-handles a{
     color: white;
+}
+.footer-section .coding-handles li{
+    padding-bottom: 10px;
 }
 .footer-section .coding-handles h4{
     font-weight: bold;
