--- a/src/css/about.css
+++ b/src/css/about.css
@@ -14,6 +14,7 @@
 .about-section .image-section {
   width: 480px !important;
   height: auto !important;
+  overflow: hidden;
 }
 .about-section .text-section {
   padding-top: 40px;
