--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -64,6 +64,9 @@
 .toggle-icon{
     color: white !important;
 }
+.show{
+    transition: ease 1s;
+}
 @media (max-width: 1461px){
     .navbar-section{
         padding: 0px 150px;
