--- a/src/css/about.css
+++ b/src/css/about.css
@@ -2,8 +2,8 @@
   display: grid;
   grid-template-columns: auto auto;
   padding: 30px 200px;
-  background-color: rgb(251,249,253);
-  background-color: #fbf9fd;
+  /* background-color: rgb(251,249,253);
+  background-color: #fbf9fd; */
   /* background-image: url("https://www.transparenttextures.com/patterns/arches.png");
   This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
   background-image: url("../assets/background-image/back-trans.png");
@@ -14,7 +14,8 @@
 .about-section .image-section {
   width: 480px !important;
   height: auto !important;
-  overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
 .about-section .text-section {
   padding-top: 40px;
@@ -25,7 +26,7 @@
   /* overflow: visible; */
 }
 .about-section .text-section h2 {
-  padding: 20px 0 20px 50px;
+  padding: 20px 0 20px 0px;
   font-family: "Space Mono", monospace;
   font-family: "Mirza", cursive;
   font-weight: 600;
@@ -35,13 +36,13 @@
 .about-section .text-section p {
   text-align: justify;
   text-align-last: center;
-  padding: 20px 0 20px 50px;
+  padding: 20px 0 20px 0px;
   font-size: 18px;
   font-family: "Roboto", sans-serif;
   font-style: italic;
 }
 .about-section .text-section .chip-class{
-  padding-left: 50px;
+  /* padding-left: 50px; */
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
