--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -1,86 +1,89 @@
-.experience-section{
-    padding: 30px 200px;
-    display: grid;
-    grid-template-columns: auto auto;
-    justify-content: space-between;
+.experience-section {
+  padding: 30px 200px;
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: space-between;
 }
-.experience-section .team-lottie img{
-    width: 400px;
+.experience-section h2 {
+  font-family: "Mirza", cursive;
+  font-weight: 600;
+  color: #393d41;
+  font-size: 50px;
 }
-.experience-section .exp-cards{
-    margin-top: 30px;
-    display: grid;
-    grid-template-columns: auto auto;
-    
+.experience-section .team-lottie img {
+  width: 400px;
 }
-.experience-section .exp-cards .color-card{
-    margin-right: 20px;
+.experience-section .exp-cards {
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: auto auto;
 }
-.experience-section .exp-cards .card-text{
-    padding-left: 20px;
+.experience-section .exp-cards .color-card {
+  margin-right: 20px;
 }
-@media (max-width: 1550px){
-    .experience-section .team-lottie{
-        margin: auto 0 5%;
-    }
-    .experience-section .team-lottie img{
-       /* min-height: 258px !important; */
-       width: 100%;
-    }
+.experience-section .exp-cards .card-text {
+  padding-left: 20px;
+}
+@media (max-width: 1550px) {
+  .experience-section .team-lottie {
+    margin: auto 0 5%;
+  }
+  .experience-section .team-lottie img {
+    /* min-height: 258px !important; */
+    width: 100%;
+  }
 }
 @media (max-width: 1341px) {
-    .experience-section{
-        padding: 30px 150px;
-    }
-    .experience-section .team-lottie{
-        margin: auto 0 5%;
-    }
-    .experience-section .team-lottie img{
-        /* min-width: 283.3px !important; */
-       
-    }
-    .experience-section .exp-cards .color-card{
-        width: 290px !important;
-    }
+  .experience-section {
+    padding: 30px 150px;
+  }
+  .experience-section .team-lottie {
+    margin: auto 0 5%;
+  }
+  .experience-section .team-lottie img {
+    /* min-width: 283.3px !important; */
+  }
+  .experience-section .exp-cards .color-card {
+    width: 290px !important;
+  }
 }
-@media (max-width: 1200px){
-    .experience-section{
-        padding: 10px 60px;
-    }
-   
+@media (max-width: 1200px) {
+  .experience-section {
+    padding: 10px 60px;
+  }
 }
 @media (max-width: 1136px) {
-    .experience-section{
-        justify-content: center;
-       grid-template-columns: auto;
-    }
-    .experience-section .exp-cards{
-        justify-content: space-between;
-    }
-    .experience-section .exp-cards .color-card{
-        margin: 0px;
-        width: auto !important;
-    }
-    .experience-section .team-lottie{
-       display: flex;
-        justify-content: center;
-    }
+  .experience-section {
+    justify-content: center;
+    grid-template-columns: auto;
+  }
+  .experience-section .exp-cards {
+    justify-content: space-between;
+  }
+  .experience-section .exp-cards .color-card {
+    margin: 0px;
+    width: auto !important;
+  }
+  .experience-section .team-lottie {
+    display: flex;
+    justify-content: center;
+  }
 }
 @media (max-width: 596px) {
-    .experience-section .exp-cards{
-        grid-template-columns: auto;
-    }
-    .experience-section .exp-cards .color-card{
-        width: auto !important;
-        height: auto !important;
-    }
-    .experience-section .team-lottie img{
-        width: 100%;
-    }
+  .experience-section .exp-cards {
+    grid-template-columns: auto;
+  }
+  .experience-section .exp-cards .color-card {
+    width: auto !important;
+    height: auto !important;
+  }
+  .experience-section .team-lottie img {
+    width: 100%;
+  }
 }
 
 @media (max-width: 460px) {
-    .experience-section {
-      padding: 10px 20px;
-    }
+  .experience-section {
+    padding: 10px 20px;
+  }
 }
